# JC_Code

./: CMakeLists.txt
LCCAdaptive/: CMakeLists.txt  hadaptive.cpp  hadaptive.h
LCCCommon/: CMakeLists.txt  CreateGeoMesh.cpp  CreateGeoMesh.h  Refinements.cpp  Refinements.h  commonJC.cpp  commonJC.h  myheader.cpp  myheader.h
LCCEstimator/: CMakeLists.txt  EELaplacianRecLS.cpp  EELaplacianRecLS.h  EELaplacianRecWLS.cpp  EELaplacianRecWLS.h  ErrorEstimator.cpp  ErrorEstimator.h
LCC_Projects/: CMakeLists.txt
LCC_Projects/Poisson_H1_ReconstLaplacian/: CMakeLists.txt  OrdemConnectsInHdivEnriquecido.key  OrdemConnectsInHdivEnriquecido.pptx  PoissonEquations.cpp  PoissonEquations.h  main.cpp
LCC_Projects/Poisson_H1_ReconstLaplacian_New/: CMakeLists.txt  main.cpp
